[package]
name = "emp"
description = "Erlang style Message Passing using generators"
version = "0.1.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]
edition = "2018"

[dependencies]
bincode = "*"
serde = "*"
bitflags = "*"
syscall-alt = "*"
libc = "*"
log = "*"
slotmap = { version = "*", features = ["unstable"] }
