[package]
name = "emp"
description = "Erlang style Message Passing using generators"
version = "0.2.0"
authors = ["Sebastian Köln <s3bk@protonmail.com>"]
edition = "2018"

[dependencies]
bincode = "*"
serde = "*"
bitflags = "*"
syscalls = "*"
libc = "*"
log = "*"
slotmap = { version = "*", features = ["unstable"] }
crossbeam = "*"